createClusterByYaml/Container-Yaml-File/deployment_kube-example_nginx.yaml
# APP
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-example
  name: app1
spec:
  selector:
    matchLabels:
      app: web-app1
  replicas: 2
  template:
    metadata:
      labels:
        app: web-app1
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-example
  name: app-svc1
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: web-app1
